# ovos-tts-plugin-pocket-tts

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release_build.yml  unit_tests.yml
ovos_tts_plugin_pocket_tts/: __init__.py  tts.py  version.py
tests/: test_plugin.py
