[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ovos-tts-plugin-pocket-tts"
description = "OVOS TTS plugin for Pocket TTS — lightweight CPU-only TTS by Kyutai"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Mike Gray/Oscillate Labs", email = "mike@oscillatelabs.net" },
]
keywords = ["ovos", "neon", "plugin", "tts", "pocket-tts", "kyutai", "cpu"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pocket-tts>=1.1.0",
    "ovos-plugin-manager>=0.0.1",
]

[project.optional-dependencies]
server = ["ovos-tts-server>=0.0.4", "setuptools"]

[project.urls]
Homepage = "https://github.com/OscillateLabsLLC/ovos-tts-plugin-pocket-tts"

[project.entry-points."mycroft.plugin.tts"]
ovos-tts-plugin-pocket-tts = "ovos_tts_plugin_pocket_tts:PocketTTSPlugin"

[project.entry-points."mycroft.plugin.tts.config"]
"ovos-tts-plugin-pocket-tts.config" = "ovos_tts_plugin_pocket_tts:PocketTTSPluginConfig"

[tool.hatch.version]
path = "ovos_tts_plugin_pocket_tts/version.py"

[tool.hatch.build.targets.wheel]
packages = ["ovos_tts_plugin_pocket_tts"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    # ovos-plugin-manager imports pkg_resources, which setuptools 81 removed.
    # Pin to a version that still ships it so tests can run. Drop this once
    # ovos-plugin-manager stops importing pkg_resources.
    "setuptools<81",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=ovos_tts_plugin_pocket_tts --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Route torch to CPU-only wheels for uv users (saves ~2GB on Linux)
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
